--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "axios": "^1.10.0",
     "framer-motion": "^12.23.0",
     "next": "15.3.5",
     "react": "^19.0.0",
