removed the clerk auth and added the next custom auth

--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@types/bcryptjs": "^3.0.0",
     "axios": "^1.10.0",
     "framer-motion": "^12.23.0",
+    "mongoose": "^8.17.0",
     "next": "15.3.5",
+    "next-auth": "^5.0.0-beta.29",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
