--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@types/bcryptjs": "^3.0.0",
+    "@types/nodemailer": "^6.4.17",
     "axios": "^1.10.0",
     "cashfree-pg": "^5.0.8",
     "crypto": "^1.0.1",
@@ -23,6 +24,7 @@
     "mongoose": "^8.17.0",
     "next": "15.3.5",
     "next-auth": "^5.0.0-beta.29",
+    "nodemailer": "^7.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
