--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@types/aos": "^3.0.7",
     "@types/bcryptjs": "^3.0.0",
     "@types/nodemailer": "^6.4.17",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.10.0",
     "cashfree-pg": "^5.0.8",
     "crypto": "^1.0.1",
