--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@studio-freight/react-lenis": "^0.0.47",
     "@types/aos": "^3.0.7",
     "@types/bcryptjs": "^3.0.0",
     "@types/nodemailer": "^6.4.17",
