--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
-    "@studio-freight/react-lenis": "^0.0.47",
     "@types/aos": "^3.0.7",
     "@types/bcryptjs": "^3.0.0",
     "@types/nodemailer": "^6.4.17",
@@ -24,6 +23,7 @@
     "cashfree-pg": "^5.0.8",
     "crypto": "^1.0.1",
     "framer-motion": "^12.23.0",
+    "lenis": "^1.3.11",
     "mongoose": "^8.17.0",
     "next": "15.3.5",
     "next-auth": "^5.0.0-beta.29",
